docs/k8s-manifests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coda-backend
  namespace: coda-prod
  labels:
    app: coda-backend
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: coda-backend
  type: ClusterIP
